--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container"></div>
+    <div class="container-wrapper"></div>
     <script type="text/javascript" src="./reset/reset.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
