--- a/app/player.html
+++ b/app/player.html
@@ -1,85 +1,52 @@
-
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>springGrass</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no" />
-    <link href="./favicon.ico" rel="shortcut icon" >
-    <link href="./reset/reset.css" rel="stylesheet" >
-    <link href="./css/app.css" rel="stylesheet" >
-    <link rel="stylesheet" href="http://g.alicdn.com/de/prismplayer/1.5.6/skins/default/index-min.css" />
-    <script type="text/javascript" src="http://g.alicdn.com/de/prismplayer/1.5.6/prism-h5-min.js"></script>
+    <link href="./favicon.ico" rel="shortcut icon">
+    <link href="./reset/reset.css" rel="stylesheet">
+    <script type="text/javascript" src="./reset/reset.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 </head>
+
 <body>
-<!— prism-player为h5播放器皮肤的钩子类名，请务必加上 —>
-<div id="J_prismPlayer" class="prism-player"></div>
-<script>
-    // 初始化播放器
-    var player = new prismplayer({
-        id: "J_prismPlayer", // 容器id
-        source: "http://cloud.video.taobao.com/play/u/2554695624/p/1/e/6/t/1/fv/102/28552077.mp4",// 视频地址
-        width: "100%",       // 播放器宽度
-        height: "230px" ,     // 播放器高度
-        rePlay:true,
-        cover:'./images/raise_investment/investment_banner_01.jpg',
-        preload : true,
-        playsinline:true,
-        autoplay:false,
-        skinLayout:[{
-                "name":"bigPlayButton",
-                "align":"cc"
-            },{
-                "name":"controlBar",
-                "align":"blabs",
-                "x":0,
-                "y":0,
-                "children":[
-                    {
-                        "name":"progress",
-                        "align":"tlabs"
-                    },{
-                        "name":"playButton",
-                        "align":"blabs",
-                        "x":10,
-                        "y":8
-                    },{
-                        "name":"timeDisplay",
-                        "align":"blabs",
-                        "x":80,
-                        "y":10
-                    },{
-                        "name":"volume",
-                        "align":"brabs",
-                        "x":80,
-                        "y":8
-                    },{
-                        "name":"fullScreenButton",
-                        "align":"brabs",
-                        "x":10,
-                        "y":8
-                    }
-                ]
+    <!-- ios -->
+    <a id="loadIosAppButton" href="lcds://lcdsApp/LineAction=agentDetailLineOPEN_HEXINDAI_WEB" 
+    style=" display:none;width:0px;height:0px; "></a>
+    <!-- Android -->
+    <a id="loadAndroidAppButton" href="lcds://lcdsApp/LineAction=agentDetailLineOPEN_HEXINDAI_WEB" 
+    style=" display:none;width:0px;height:0px; "></a>    
+
+    <script>
+        var ua = navigator.userAgent;
+        var platform = /MicroMessenger/i.test(ua) ? "weixin " : /Android/i.test(ua) ? "android " : /iPhone|iPad|iPod/i.test(ua) ? "ios " : "pc ";
+        function loadApp() {
+            //var chrome = ua.match(/Chrome/i) != null && ua.match(/Version\/\d+\.\d+(\.\d+)?\sChrome\//i) == null ? true : false;    
+            if (platform == "android ") {
+                location.href = "http://a.app.qq.com/o/simple.jsp?pkgname=com.privatekitchen.huijia";
+            } else if (platform == "ios ") {
+                location.href = 'https://itunes.apple.com/app/id922791815';
+            } else if (platform == "weixin ") {
+                alert('在浏览器中打开');
+            } else if (platform == "pc ") {
+                
             }
-        ]
-    });
+        }
 
+        var doOpenApp = function() {
+            setTimeout('loadApp();', 3000);
+            if(platform == "ios "){
+                document.getElementById('loadIosAppButton').click();               
+            }else if(platform == "android "){
+                document.getElementById('loadAndroidAppButton').click();    
+            }
+        };
 
-    player.on('ended',function(){
-        alert('播放完毕');
-    })
-
-    //必须在微信Weixin JSAPI的WeixinJSBridgeReady才能生效
-    document.addEventListener("WeixinJSBridgeReady", function () {
-        var prismBtton = document.getElementsByClassName('prism-big-play-btn')[0];
-        prismBtton.click();
-    }, false);
-</script>
-    <script type="text/javascript" src="./reset/reset.js"></script>
-
+        window.onload = function() {
+            doOpenApp();
+        };
+    </script>
 </body>
-
-
-
