--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <div class="container-wrapper"></div>
+    <div class="container-wrapper">
+        
+    </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
