--- a/app/player.html
+++ b/app/player.html
@@ -14,11 +14,8 @@
 
 <body>
     <!-- ios -->
-    <a id="loadIosAppButton" href="lcds://lcdsApp/LineAction=agentDetailLineOPEN_HEXINDAI_WEB" 
+    <a id="loadAppButton" href="lcds://lcdsApp/LINEAction=agentDetailLINEOPEN_HEXINDAI_WEB" 
     style=" display:none;width:0px;height:0px; "></a>
-    <!-- Android -->
-    <a id="loadAndroidAppButton" href="lcds://lcdsApp/LineAction=agentDetailLineOPEN_HEXINDAI_WEB" 
-    style=" display:none;width:0px;height:0px; "></a>    
 
     <script>
         var ua = navigator.userAgent;
@@ -38,11 +35,7 @@
 
         var doOpenApp = function() {
             setTimeout('loadApp();', 3000);
-            if(platform == "ios "){
-                document.getElementById('loadIosAppButton').click();               
-            }else if(platform == "android "){
-                document.getElementById('loadAndroidAppButton').click();    
-            }
+            document.getElementById('loadAppButton').click();               
         };
 
         window.onload = function() {
