--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>春草传播</title>
+    <title>草莓视界</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no" />
     <link href="./favicon.ico" rel="shortcut icon" >
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container-wrapper">
-        
+
     </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
