--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 
     </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="http://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
