--- a/app/template.html
+++ b/app/template.html
@@ -14,6 +14,8 @@
     <div class="container-wrapper"></div>
     <script type="text/javascript" src="./reset/reset.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="http://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
+    
 </body>
 
 </html>
