--- a/app/index2.html
+++ b/app/index2.html
@@ -21,7 +21,8 @@
     // 初始化播放器
     window.player = new prismplayer({
         id: "J_prismPlayer", // 容器id
-        source: "http://cloud.video.taobao.com/play/u/2554695624/p/1/e/6/t/1/fv/102/28552077.mp4",// 视频地址
+        // source: "http://cloud.video.taobao.com/play/u/2554695624/p/1/e/6/t/1/fv/102/28552077.mp4",// 视频地址
+        source: "http://test-video-output1.oss-cn-shenzhen.aliyuncs.com/transfor/a7898962971043548f5aecdec9d062fd/act-m3u8-segment/286075699172038144.m3u8",// 视频地址
         width: "100%",       // 播放器宽度
         height: "230px" ,     // 播放器高度
         rePlay:true,
