--- a/app/redirect.html
+++ b/app/redirect.html
@@ -18,15 +18,17 @@
         data[arr[i].substring(0, pos)] = decodeURIComponent(arr[i].substring(pos + 1));
     }
     if (data.code) {
-        if(data.scope){
-            location.href = 'http://' + location.hostname + '/#/wechatAuth?code=' + data.code + '&state=' + data.state;   
-        }else{
-            location.href = 'http://' + location.hostname + '/#/?code=' + data.code + '&state=' + data.state;            
+        if (data.scope) {
+            location.href = 'http://' + location.hostname + '/#/wechatAuth?code=' + data.code + '&state=' + data.state;
+        } else {
+            location.href = 'http://' + location.hostname + '/#/?code=' + data.code + '&state=' + data.state;
         }
     } else {
-        var scope = data.scope;
-        var url   = encodeURIComponent('http://' + location.hostname + '/redirect.html?scope='+scope);
-        location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope="+scope+"&state=chuncao#wechat_redirect"
+        var url = encodeURIComponent('http://' + location.hostname + '/redirect.html');
+        if (data.scope === 'snsapi_userinfo') {
+            url = encodeURIComponent('http://' + location.hostname + '/redirect.html?scope=' + data.scope);
+        }
+        location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope=" + data.scope + "&state=chuncao#wechat_redirect"
     }
     </script>
 </body>
