--- a/app/redirect.html
+++ b/app/redirect.html
@@ -24,11 +24,12 @@
             location.href = 'http://' + location.hostname + '/#/?code=' + data.code + '&state=' + data.state;
         }
     } else {
+        var scope = data.scope || 'snsapi_base';
         var url = encodeURIComponent('http://' + location.hostname + '/redirect.html');
-        if (data.scope === 'snsapi_userinfo') {
-            url = encodeURIComponent('http://' + location.hostname + '/redirect.html?scope=' + data.scope);
+        if (scope === 'snsapi_userinfo') {
+            url = encodeURIComponent('http://' + location.hostname + '/redirect.html?scope=' + scope);
         }
-        location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope=" + data.scope + "&state=chuncao#wechat_redirect"
+        location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope=" + scope + "&state=chuncao#wechat_redirect"
     }
     </script>
 </body>
