--- a/app/loading.html
+++ b/app/loading.html
@@ -1936,8 +1936,8 @@
     .line-spin-fade-loader > div:nth-child(1) {
         top: 20px;
         left: 0;
-        -webkit-animation: line-spin-fade-loader 1.2s 0.12s infinite ease-in-out;
-        animation: line-spin-fade-loader 1.2s 0.12s infinite ease-in-out;
+/*        -webkit-animation: line-spin-fade-loader 1.2s 0.12s infinite ease-in-out;
+        animation: line-spin-fade-loader 1.2s 0.12s infinite ease-in-out;*/
     }
     
     .line-spin-fade-loader > div:nth-child(2) {
