--- a/app/redirect.html
+++ b/app/redirect.html
@@ -29,7 +29,7 @@
         if (scope === 'snsapi_userinfo') {
             url = encodeURIComponent('http://' + location.hostname + '/redirect.html?scope=' + scope);
         }
-        // location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope=" + scope + "&state=chuncao#wechat_redirect"        
+        // location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx69d84247bc78b780&redirect_uri=" + url + "&response_type=code&scope=" + scope + "&state=chuncao#wechat_redirect";        
         location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx55f3325081af172c&redirect_uri=" + url + "&response_type=code&scope=" + scope + "&state=chuncao#wechat_redirect"
     }
     </script>
