--- a/app/template.html
+++ b/app/template.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-wrapper"></div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="http://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
+    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
     
 </body>
 
