--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no" />
-    <meta name="x5-orientation" content="portrait">
     <link href="./favicon.ico" rel="shortcut icon" >
-    <script type="text/javascript" src="./reset/reset.js"></script>
     <link href="./reset/reset.css" rel="stylesheet" >
     <link href="./reset/data-flex.css" rel="stylesheet" >
     <link href="./css/app.css" rel="stylesheet" >
@@ -18,8 +16,9 @@
     <div class="container-wrapper">
 
     </div>
-    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
+    <script type="text/javascript" src="./reset/reset.js"></script>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js" async="async"></script>
+    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js" async="async"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
