--- a/app/template.html
+++ b/app/template.html
@@ -8,14 +8,13 @@
     <link href="./favicon.ico" rel="shortcut icon" >
     <link href="./reset/reset.css" rel="stylesheet" >
     <link href="./reset/data-flex.css" rel="stylesheet" >
-    <script type="text/javascript" src="./reset/reset.js"></script>
 </head>
 
 <body>
     <div class="container-wrapper"></div>
-    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
-    
+    <script type="text/javascript" src="./reset/reset.js"></script>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js" async="async"></script>
+    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js" async="async"></script>
 </body>
 
 </html>
