--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
 
     </div>
     <script type="text/javascript" src="./reset/reset.js"></script>
-    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js" async="async"></script>
-    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js" async="async"></script>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="https://g.alicdn.com/de/prismplayer/1.5.6/prism-min.js"></script>
     <script type="text/javascript" src="./js/vendors.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
