--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no" />
+    <meta name="x5-orientation" content="portrait">
     <link href="./favicon.ico" rel="shortcut icon" >
     <link href="./reset/reset.css" rel="stylesheet" >
     <link href="./reset/data-flex.css" rel="stylesheet" >
